force-app/main/default/objects/SFDC_Assignment__c/SFDC_Assignment__c.object-meta.xml
<CustomObject>
    <description>Assignments associate Resources to Projects.</description>
    <label>Assignment</label>
    <nameField>
        <displayFormat>Assignment {000}</displayFormat>
        <label>Assignments</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>