force-app/main/default/objects/SFDC_Assignment__c/fields/Cap_on_hours__c.field-meta.xml
<CustomField>
    <fullName>Cap_on_hours__c</fullName>
    <label>Cap on hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>