force-app/main/default/objects/SFDC_Assignment__c/fields/Green_Light__c.field-meta.xml
<CustomField>
    <fullName>Green_Light__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Green Light</label>
    <type>Checkbox</type>
</CustomField>