force-app/main/default/objects/SFDC_Assignment__c/listViews/AllAssignments.listView-meta.xml
<ListView>
    <fullName>AllAssignments</fullName>
    <columns>Projects__c</columns>
    <columns>Resource__c</columns>
    <columns>Role__c</columns>
    <columns>Green_Light__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assignments</label>
</ListView>